@@ -1,3 +1,9 @@
+1999-06-13  Ian Lance Taylor  <ian@zembu.com>
+
+	* ld-checks/asm.s: Use a symbol name for .lcomm.
+	* ld-checks/checks.exp: Use different names for the two tests.
+	Don't add extra text when invoking fail.
+
 1999-06-12  Ian Lance Taylor  <ian@zembu.com>
 
 	* ld-scripts/phdrs.exp: Change target check from "*-*-linuxaout*"
